<resources>
    <plurals name="unit_format_minutes">
        <item quantity="one">One minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <plurals name="unit_format_seconds">
        <item quantity="one">One second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>

    <string name="app_name">cubic20</string>
    <string name="app_email">kevin@potatofrom.space</string>

    <string name="main_welcome_message">Welcome! Open the menu to turn eye care reminders on or off.</string>

    <string name="main_reminder_status_desc">Reminders are currently:</string>
    <string name="main_reminder_status_on">On</string>
    <string name="main_reminder_status_off">Off</string>
    <string name="main_reminder_status_loading">Loading…</string>

    <string name="main_snackbar_dnd_text">Warning: Do not Disturb is on; reminders will be skipped.</string>
    <string name="main_snackbar_dnd_disable_dnd">Disable DnD</string>

    <string name="time_until_next_reminder_format">%1$02dm%2$02ds</string>

    <string name="countdown_display_desc">Time until next reminder:</string>
    <string name="countdown_display_complete">[Right now.]</string>
    <string name="countdown_display_error">ERROR!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notification_title">Eye reminders are on</string>
    <plurals name="notification_text">
        <item quantity="one">Reminders will occur every %1$d minute</item>
        <item quantity="other">Reminders will occur every %1$d minutes</item>
    </plurals>
    <string name="notification_stop">Stop</string>
    <plurals name="notification_postpone">
        <item quantity="one">Postpone %1$d minute</item>
        <item quantity="other">Postpone %1$d minutes</item>
    </plurals>
    <string name="notification_options">Options</string>

    <string name="main_drawer_start_reminders">Start reminders</string>
    <string name="main_drawer_stop_reminders">Stop reminders</string>
    <string name="main_drawer_stats">@string/title_activity_stats</string>
    <string name="main_drawer_about">@string/title_activity_about</string>
    <string name="main_drawer_settings">@string/title_activity_settings</string>

    <plurals name="toast_created_alarm">
        <item quantity="one">You will now be reminded every %1$d minute to rest your eyes.</item>
        <item quantity="other">You will now be reminded every %1$d minutes to rest your eyes.</item>
    </plurals>
    <string name="toast_stopped_reminders">Reminders have now stopped.</string>
    <string name="toast_postponed_next_reminder">Next reminder has been updated to be %1$s in the future.</string>
    <string name="toast_loading_reminder_status">Turning reminders %1$s…</string>
    <string name="toast_notification_policy_access_instructions">Please allow cubic20 to have Do not Disturb control so it can disable Do not Disturb. (If you don\'t want to do that, just go back and disable Do not Disturb manually.)</string>

    <string name="title_activity_reminder">Time to Look Away!</string>
    <plurals name="reminder_look_away_desc">
        <item quantity="one">For %1$d second, look at something 20+ feet away.</item>
        <item quantity="other">For %1$d seconds, look at something 20+ feet away.</item>
    </plurals>
    <string name="reminder_stop_reminders_btn">Stop Reminders</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_summary_reminder_interval_min">How often, in minutes, to be reminded to take care of your eyes</string>
    <string name="pref_title_reminder_interval_min">Reminder interval</string>
    <string name="pref_summary_reminder_length_sec">How long, in seconds, to be prompted to look away</string>
    <string name="pref_title_reminder_length_sec">Reminder length</string>
    <string name="pref_summary_start_on_boot">Start eye care reminders on device startup</string>
    <string name="pref_title_start_on_boot">Start on boot</string>
    <string name="pref_summary_show_persistent_notification">Show a persistent notification in the notification area when tracking is active</string>
    <string name="pref_title_show_persistent_notification">Show persistent notification</string>
    <string name="pref_summary_dnd_skip_reminders">Reminders will be skipped if Do not Disturb is on Priority only or Total silence</string>
    <string name="pref_title_dnd_skip_reminders">Skip reminders if Do not Disturb is on</string>

    <string name="title_activity_about">About</string>
    <string name="about_copyright">Copyright 2016 © Kevin Liu &lt;kevin@potatofrom.space&gt;

        \n\ncubic20 is free software: you can redistribute it and/or modify it
        under the terms of the GNU General Public License as published by the
        Free Software Foundation, either version 3 of the License, or (at your
        option) any later version.

        \n\ncubic20 is distributed in the hope that it will be useful, but
        WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
        General Public License for more details. (You can read it at
        <a href="https://gnu.org/licenses/">the GNU website</a>.)</string>
    <string name="about_source_code">You can find the source code of cubic20 on <a href="https://github.com/Pneumaticat/cubic20">GitHub</a>.</string>

    <string name="title_activity_stats">Statistics</string>
    <string name="stats_action_refresh">Refresh Stats</string>
    <string name="stats_value_error">[ERROR!]</string>
    <string name="stats_started_on">Started recording stats on</string>
    <string name="stats_no_stats_recorded">never (no stats recorded yet)</string>
    <string name="stats_reminders_started">Reminders started</string>
    <string name="stats_reminders_stopped">Reminders stopped</string>
    <string name="stats_reminders_postponed">Reminders postponed</string>
    <string name="stats_reminders_hit">Reminders hit</string>
    <string name="stats_time_postponed">Postponed reminders for</string>
    <string name="stats_time_rested">Rested eyes for</string>
    <string name="stats_button_reset_stats">Reset Stats</string>
</resources>
