<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_start_reminders"
            android:icon="@drawable/ic_menu_visibility"
            android:title="@string/main_drawer_start_reminders" />
        <item
            android:id="@+id/menu_stop_reminders"
            android:icon="@drawable/ic_menu_visibility_off"
            android:title="@string/main_drawer_stop_reminders"
            android:enabled="false" />
    </group>

    <group>
        <item
            android:id="@+id/menu_stats"
            android:icon="@drawable/ic_menu_poll"
            android:title="@string/main_drawer_stats" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/main_drawer_about" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/main_drawer_settings" />
    </group>
</menu>
